--- a/build.gradle
+++ b/build.gradle
@@ -103,13 +103,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 // 前端资源处理
-// 为什么需要这些任务：插件包含 Web 管理界面，需要将前端构建产物打包进 JAR
-tasks.register('processUiResources', Copy) {
-    from project(':ui').layout.buildDirectory.dir('dist')
-    into layout.buildDirectory.dir('resources/main/console') // Halo 约定的管理界面路径
-    shouldRunAfter tasks.named('processResources') // 确保在标准资源处理后执行
-}
-
 tasks.register('processShikiResources', Copy) {
     from project(':shiki').layout.buildDirectory.dir('dist')
     into layout.buildDirectory.dir('resources/main/js') // 插件 JS 资源目录
@@ -144,14 +137,11 @@ afterEvaluate {
     }
     
     // 配置子项目依赖 - 为什么在 afterEvaluate：确保子项目任务已注册
-    tasks.named('processUiResources') {
-        dependsOn project(':ui').tasks.named('assemble')
-    }
     tasks.named('processShikiResources') {
         dependsOn project(':shiki').tasks.named('assemble')
     }
     tasks.named('classes') {
-        dependsOn tasks.named('processUiResources'), tasks.named('processShikiResources')
+        dependsOn tasks.named('processShikiResources')
     }
     
     // 导入自定义组件索引任务类 - 为什么用自定义：支持多 JAR 任务，官方不支持
@@ -224,7 +214,7 @@ afterEvaluate {
         }
         
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-        dependsOn 'compileJava', 'processResources', 'processUiResources', jarLiteIndexTask
+        dependsOn 'compileJava', 'processResources', jarLiteIndexTask
         
         // 包含对应的组件索引文件 - Halo 需要此文件来注册插件组件
         into('META-INF') {
