chore: Comment out frontend test step in CI workflow

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: gradlew test
         run: |
           ./gradlew test
-      - name: Front test
-        run: |
-          cd ui
-          pnpm test
+      # - name: Front test
+      #   run: |
+      #     cd ui
+      #     pnpm test
