--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,4 +19,4 @@ jobs:
       java-version: 21
       # Remove skip-appstore-release and set app-id if you want to release to the App Store
       skip-appstore-release: true
-      # app-id: app-xyz
+      app-id: app-di1jh8gd
