--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import top.howiehz.gradle.YamlPluginVersionSupport
+
 /*
  * Halo Plugin Extra API - Build Configuration
  * 
@@ -115,7 +117,7 @@ tasks.register('processShikiResources', Copy) {
 // 为什么用 YamlPluginVersionSupport：比正则表达式更安全，保持 YAML 格式和注释
 def configurePluginYamlVersion() {
     def manifestFile = file('src/main/resources/plugin.yaml')
-    return top.howiehz.gradle.YamlPluginVersionSupport.configurePluginYamlVersion(project, manifestFile)
+    return YamlPluginVersionSupport.configurePluginYamlVersion(project, manifestFile)
 }
 
 def jarLiteIndexTask
