Refactor logging and validation in JS engine and render services

--- a/src/main/resources/extensions/settings.yaml
+++ b/src/main/resources/extensions/settings.yaml
@@ -14,7 +14,7 @@ spec:
           label: 最小池大小
           value: 1
           min: 1
-          validation: required|min:1
+          validation: required
           help: JS 引擎池的最小大小。每个引擎会预加载所需的 JS 模块。
         - $formkit: number
           name: poolMaxSize
@@ -23,7 +23,7 @@ spec:
           label: 最大池大小
           value: 2
           min: 1
-          validation: required|min:1
+          validation: required
           help: JS 引擎池的最大大小。设置过大可能导致内存溢出。每个引擎会预加载所需的 JS 模块。
     - group: shiki
       label: 代码高亮（仅全量版可用）
