--- a/ui/package.json
+++ b/ui/package.json
@@ -26,38 +26,38 @@
     "@halo-dev/api-client": "^2.21.1",
     "@halo-dev/components": "^2.21.0",
     "@halo-dev/console-shared": "^2.21.0",
-    "axios": "^1.7.2",
-    "canvas-confetti": "^1.9.3",
+    "axios": "^1.13.1",
+    "canvas-confetti": "^1.9.4",
     "husky": "^9.1.7",
-    "vue": "^3.5.17"
+    "vue": "^3.5.22"
   },
   "devDependencies": {
     "@halo-dev/ui-plugin-bundler-kit": "^2.21.2",
-    "@iconify/json": "^2.2.350",
-    "@rsbuild/core": "^1.4.3",
-    "@rsbuild/plugin-sass": "^1.3.2",
+    "@iconify/json": "^2.2.401",
+    "@rsbuild/core": "^1.5.17",
+    "@rsbuild/plugin-sass": "^1.4.0",
     "@tsconfig/node20": "^20.1.6",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^24.5.2",
-    "@vitest/eslint-plugin": "^1.2.7",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^24.9.2",
+    "@vitest/eslint-plugin": "^1.3.26",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.29.0",
-    "eslint-plugin-oxlint": "^1.16.0",
-    "eslint-plugin-vue": "~10.4.0",
-    "jsdom": "^27.0.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-oxlint": "^1.24.0",
+    "eslint-plugin-vue": "~10.5.1",
+    "husky": "^8.0.0",
+    "jsdom": "^27.0.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "^1.16.0",
-    "prettier": "^3.6.0",
-    "sass": "^1.89.2",
-    "typescript": "~5.9.2",
-    "unplugin-icons": "^22.1.0",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.7",
-    "husky": "^8.0.0"
+    "oxlint": "^1.24.0",
+    "prettier": "^3.6.2",
+    "sass": "^1.93.2",
+    "typescript": "~5.9.3",
+    "unplugin-icons": "^22.5.0",
+    "vitest": "^4.0.5",
+    "vue-tsc": "^3.1.2"
   },
   "packageManager": "pnpm@10.2.0"
 }
