--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@halo-dev/api-client": "^2.22.0",
     "@halo-dev/components": "^2.22.0",
-    "@halo-dev/console-shared": "^2.21.0",
+    "@halo-dev/ui-shared": "^2.22.0",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
     "husky": "^9.1.7",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@halo-dev/ui-plugin-bundler-kit": "^2.22.0",
-    "@iconify/json": "^2.2.421",
+    "@iconify/json": "^2.2.422",
     "@rsbuild/core": "^1.6.15",
     "@rsbuild/plugin-sass": "^1.4.0",
     "@tsconfig/node20": "^20.1.8",
@@ -46,12 +46,12 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
-    "eslint-plugin-oxlint": "^1.35.0",
+    "eslint-plugin-oxlint": "^1.36.0",
     "eslint-plugin-vue": "~10.6.2",
     "husky": "^8.0.0",
     "jsdom": "^27.4.0",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "^1.35.0",
+    "oxlint": "^1.36.0",
     "prettier": "^3.7.4",
     "sass": "^1.97.1",
     "typescript": "~5.9.3",
