--- a/src-js-bundle/shiki/package.json
+++ b/src-js-bundle/shiki/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "generate-config": "node ./scripts/generate-config.js",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "npm:rolldown-vite@7.3.0"
+    "js-yaml": "^4.1.1",
+    "vite": "npm:rolldown-vite@7.3.1"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@7.3.0"
+    "vite": "npm:rolldown-vite@7.3.1"
   },
   "dependencies": {
-    "shiki": "^3.20.0"
+    "shiki": "^3.22.0"
   }
 }
